eclipseWorkspace/AK SFDC/src/objects/Candidate_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Website_Text__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Opportunity__r.Account.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Email_Text__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Candidate_Name__r.Email_Personal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Email Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Feedback__c</fullName>
        <label>Candidate Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate_First_Name_Text__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Candidate_Name__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate First Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_ID__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Candidate_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Name_Text__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Candidate_Name__r.FirstName  &amp; &quot; &quot; &amp;  Identified_Candidate_Association_ID__r.Candidate_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Identified_Candidate_Association_ID__r.Candidate_Name__c , Identified_Candidate_Association_ID__r.Candidate_Name__r.FirstName &amp;
&quot; &quot; &amp;
Identified_Candidate_Association_ID__r.Candidate_Name__r.LastName,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Feedback__c</fullName>
        <label>Client Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identified_Candidate_Association_ID__c</fullName>
        <label>Identified Candidate Association ID</label>
        <referenceTo>IdentifiedCandidateAssociation__c</referenceTo>
        <relationshipLabel>Candidate Stage History</relationshipLabel>
        <relationshipName>Candidate_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interview_Time__c</fullName>
        <label>Interview Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Type__c</fullName>
        <label>Interview Type</label>
        <picklist>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Details__c</fullName>
        <label>Offer Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Text__c</fullName>
        <formula>Identified_Candidate_Association_ID__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Identified_Candidate_Association_ID__r.Opportunity__c,  Identified_Candidate_Association_ID__r.Opportunity__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Interviewer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Other Interviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interviews (Not Primary)</relationshipLabel>
        <relationshipName>Candidate_Stages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Interviewer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Interviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interviews (Primary)</relationshipLabel>
        <relationshipName>Candidate_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Comment__c</fullName>
        <label>Stage Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>View_Update_Stage__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id ,  RecordType.Name , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View / Update Stage</label>
        <type>Text</type>
    </fields>
    <label>Candidate Stage</label>
    <nameField>
        <displayFormat>StageID{000000}</displayFormat>
        <label>Candidate Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Stages</pluralLabel>
    <recordTypes>
        <fullName>CV_Feedback</fullName>
        <active>true</active>
        <label>04a.CV Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>CV_Submission</fullName>
        <active>true</active>
        <label>04.CV Submission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Final_Interview</fullName>
        <active>true</active>
        <label>07.Final Interview</label>
    </recordTypes>
    <recordTypes>
        <fullName>First_Interview</fullName>
        <active>true</active>
        <label>05.First Interview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Identified</fullName>
        <active>true</active>
        <label>01.Identified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interview</fullName>
        <active>true</active>
        <label>06.Interview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interview_Feedback</fullName>
        <active>true</active>
        <label>08.Interview Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offer_Accepted</fullName>
        <active>true</active>
        <label>10.Offer Accepted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offer_Declined</fullName>
        <active>true</active>
        <label>11.Offer Declined</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offer_Extended</fullName>
        <active>true</active>
        <label>09.Offer Extended</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sent_Job_Description</fullName>
        <active>true</active>
        <label>02.Sent Job Description</label>
    </recordTypes>
    <recordTypes>
        <fullName>X03_Long_List</fullName>
        <active>true</active>
        <label>03.Long List</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>